--- a/about.html
+++ b/about.html
@@ -25,6 +25,11 @@
                     forbidden fruit) and she unleashed eight demons unto the world. The first seven being the seven deadly sins, 
                     and the last, which she managed to capture, was hope.
                                                                                                     (credit:UrbanHistory.com)</p>
+                    <h2 class="text-center">About this app</h2>
+                    <p> This app is similar to Pandora box in some way, it will give you eight minutes exactly in the box
+                    , once it's over the app will automaticly close, and during the eight minutes of time you can ask what 
+                    ever you want to the box, it will return you amzing randomly gifs, and there is no return to the box!
+                    </p>
                     
                 </div>
                 <div class=col-md-3></div>
