--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             </dive>
             
         </div>
-       
+          <hide>
+          <audio autoplay loop>
+          <source src=".mp3">
+          </audio>
+          </hide>
     </body>
 </html>
