--- a/pandora.html
+++ b/pandora.html
@@ -24,6 +24,14 @@
             <div class="col-md-3"></div>
             </div>
     </div>
-        
+          <hide>
+          <audio autoplay loop>
+          <source src="relaxing.mp3">S
+          </audio>
+          <audio id=Evilsounds>
+          <source src="Evil.mp3" type="audio/mpeg">
+          </audio>
+          </hide>
+          
     </body>
 </html>
