begin to repurpose

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Welcome to Pandora Box</title>
+        <title>Dequan Zhang</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src="welcome.js" async></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -15,15 +15,19 @@
                  <div class= "col-md-3"></div>
                  <div class= "col-md-6">
                      <form>
-                     <button class= "form-control" id="Enter" formaction="pandora.html">Enter Pandora Box</button>
-                     <button class= "form-control" id="About" formaction="about.html">About</button>
-                     <button class= "form-control" id="leave"> Exit</button>
+                        
                      </form>
                  </div>
                  <div class= "col-md-3"></div>
                 </div>
             </dive>
-            
+            <div id="Home" class="Front Page">
+                <h2>Home</h2>
+            </div>
+            <div id="About" class="Front Page" style="float: left">
+                <h2>About</h2>
+            </div>
+
         </div>
           <hide>
           <audio autoplay loop>
