finish navagational part

--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html>
 
 <head>
-    <title>Dequan Zhang</title>
+    <title>Projects</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="welcome.js" async></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
@@ -16,8 +15,9 @@
 <body>
     <ul class = "nav-tag">
         <li class = "tag"><a>Home</a></li>
-        <li class = "tag"><a href="/projects.html">Projects</a></li>
+        <li class = "tag"><a>Projects</a></li>
         <li class = "tag"><a>About</a></li>
     </ul>
+    <p>This is the project page</p>
 </body>
 </html>
