finish linking together

--- a/projects.html
+++ b/projects.html
@@ -14,10 +14,9 @@
 
 <body>
     <ul class = "nav-tag">
-        <li class = "tag"><a>Home</a></li>
-        <li class = "tag"><a>Projects</a></li>
-        <li class = "tag"><a>About</a></li>
+        <li class = "tag"><a href="/index.html">Home</a></li>
+        <li class = "tag"><a href="/projects.html">Projects</a></li>
+        <li class = "tag"><a hret="/about.html">About</a></li>
     </ul>
-    <p>This is the project page</p>
 </body>
 </html>
