--- a/about.html
+++ b/about.html
@@ -1,39 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>About Pandora Box</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script src="about.js" async></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="about.css" />
-    </head>
-    <body>
-      
-        <div class="cntainer">
-            <div class="row">
-                <div class=col-md-3>
-                <form>
-                    <button formaction="index.html">Back</button></div>
-                </form>
-                <div class=col-md-6>
-                    <h1 class="text-center"> About Pandora Box</h1>
-                    <img src="https://i.pinimg.com/originals/22/50/02/2250023bca29f254be588142311029d8.gif">
-                    <p> According to Greek legend, the first woman, Pandora, was actually sent as a curse to Zues' men 
-                    (See, you knew it was true, guys) and was given a present upon her marriage. The present was a box 
-                    that she was told never to open. Needless to say her curiosity got the better of her (like eating 
-                    forbidden fruit) and she unleashed eight demons unto the world. The first seven being the seven deadly sins, 
-                    and the last, which she managed to capture, was hope.
-                                                                                                    (credit:UrbanHistory.com)</p>
-                    <h2 class="text-center">About this app</h2>
-                    <p> This app is similar to Pandora box in some way, it will give you eight minutes exactly in the box
-                    , once it's over the app will automaticly close, and during the eight minutes of time you can ask what 
-                    ever you want to the box, it will return you amzing randomly gifs, and there is no return to the box!
-                    </p>
-                    
-                </div>
-                <div class=col-md-3></div>
-            </div>
-        </dive
-    </body>
+
+<head>
+    <title>Dequan Zhang</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="welcome.js" async></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="welcome.css" />
+</head>
+
+<body>
+    <ul class = "nav-tag">
+        <li class = "tag"><a href="/index.html">Home</a></li>
+        <li class = "tag"><a href="/projects.html">Projects</a></li>
+        <li class = "tag"><a hret="/about.html">About</a></li>
+    </ul>
+</body>
 </html>
