--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
     <ul class = "nav-tag">
-        <li class = "tag"><a>Home</a></li>
+        <li class = "tag"><a href="/index.html">Home</a></li>
         <li class = "tag"><a href="/projects.html">Projects</a></li>
-        <li class = "tag"><a>About</a></li>
+        <li class = "tag"><a href="/about.html">About</a></li>
     </ul>
 </body>
 </html>
