--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Dequan Zhang</title>
+    <title>About</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="welcome.js" async></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
@@ -14,10 +14,11 @@
 </head>
 
 <body>
-    <ul class = "nav-tag">
-        <li class = "tag"><a href="/index.html">Home</a></li>
-        <li class = "tag"><a href="/projects.html">Projects</a></li>
-        <li class = "tag"><a hret="/about.html">About</a></li>
+    <ul class="nav-tag">
+        <li class="tag"><a href="/index.html">Home</a></li>
+        <li class="tag"><a href="/projects.html">Projects</a></li>
+        <li class="tag"><a hret="/about.html">About</a></li>
     </ul>
 </body>
+
 </html>
