--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -13,10 +14,11 @@
 </head>
 
 <body>
-    <ul class = "nav-tag">
-        <li class = "tag"><a href="/index.html">Home</a></li>
-        <li class = "tag"><a href="/projects.html">Projects</a></li>
-        <li class = "tag"><a hret="/about.html">About</a></li>
+    <ul class="nav-tag">
+        <li class="tag"><a href="/index.html">Home</a></li>
+        <li class="tag"><a href="/projects.html">Projects</a></li>
+        <li class="tag"><a hret="/about.html">About</a></li>
     </ul>
 </body>
+
 </html>
