--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>About</title>
+    <title>Dequan Zhang</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="welcome.js" async></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
@@ -10,15 +10,15 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="welcome.css" />
+    <link rel="stylesheet" type="text/css" href="../css/welcome.css" />
 </head>
 
 <body>
-    <ul class="nav-tag">
-        <li class="tag"><a href="/index.html">Home</a></li>
-        <li class="tag"><a href="/projects.html">Projects</a></li>
-        <li class="tag"><a hret="/about.html">About</a></li>
+    <ul class = "nav-tag">
+        <li class = "tag"><a href="/index.html">Home</a></li>
+        <li class = "tag"><a href="/projects.html">Projects</a></li>
+        <li class = "tag"><a href="/about.html">About</a></li>
     </ul>
-</body>
 
+</body>
 </html>
