--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../css/welcome.css" />
+    <link rel="stylesheet" type="text/css" href="./css/welcome.css" />
 </head>
 
 <body>
     <ul class = "nav-tag">
         <li class = "tag"><a href="/index.html">Home</a></li>
-        <li class = "tag"><a href="/projects.html">Projects</a></li>
-        <li class = "tag"><a href="/about.html">About</a></li>
+        <li class = "tag"><a href="./src/projects.html">Projects</a></li>
+        <li class = "tag"><a href="./src/about.html">About</a></li>
     </ul>
 
 </body>
