--- a/src/about.html
+++ b/src/about.html
@@ -10,15 +10,19 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../css/welcome.css" />
+    <link rel="stylesheet" type="text/css" href="../css/about.css" />
 </head>
 
 <body>
     <ul class="nav-tag">
-        <li class="tag"><a href="/index.html">Home</a></li>
+        <li class="tag"><a href="../index.html">Home</a></li>
         <li class="tag"><a href="/projects.html">Projects</a></li>
         <li class="tag"><a hret="/about.html">About</a></li>
     </ul>
+    <div id = "image_container">
+        <img id="my_image" src="../img/me.JPG" alt="Me">
+
+    </div>
 </body>
 
 </html>
