--- a/src/projects.html
+++ b/src/projects.html
@@ -15,7 +15,7 @@
 
 <body>
     <ul class = "nav-tag">
-        <li class = "tag"><a href="/index.html">Home</a></li>
+        <li class = "tag"><a href="../index.html">Home</a></li>
         <li class = "tag"><a href="/projects.html">Projects</a></li>
         <li class = "tag"><a href="/about.html">About</a></li>
     </ul>
