finish addingfeatures to about page

--- a/src/about.html
+++ b/src/about.html
@@ -16,12 +16,16 @@
 <body>
     <ul class="nav-tag">
         <li class="tag"><a href="../index.html">Home</a></li>
-        <li class="tag"><a href="/projects.html">Projects</a></li>
-        <li class="tag"><a hret="/about.html">About</a></li>
+        <li class="tag"><a href="./projects.html">Projects</a></li>
+        <li class="tag"><a hret="./about.html">About</a></li>
     </ul>
     <div id = "image_container">
         <img id="my_image" src="../img/me.JPG" alt="Me">
-
+        <div class = "overlay">
+            <div class = "text">
+                Me and Professor Hilginer next to Soda Hall
+            </div>
+        </div>
     </div>
 </body>
 
